infrastructure/configs/traefik.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 8000
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
spec:
  controllerName: traefik.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: traefik
spec:
  parentRefs:
    - kind: Gateway
      name: ingress
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.home.arpa`)
      middlewares:
        - name: ip-allowlist
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: traefik-dashboard-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ip-allowlist
  namespace: traefik
spec:
  ipAllowList:
    sourceRange:
      - 192.168.1.2/31
      - 192.168.1.4/30
      - 192.168.1.8/29
      - 192.168.1.16/28
      - 192.168.1.32/27
      - 192.168.1.64/26
      - 192.168.1.128/25
      - 192.168.4.0/24
      - 2a0b:9401:8b:1::/64
      - 2a0b:9401:8b:4::/64
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: traefik
spec:
  headers:
    customResponseHeaders:
      Permissions-Policy: geolocation=(), microphone=(), camera=()
      Referrer-Policy: strict-origin-when-cross-origin
      X-Content-Type-Options: nosniff
      X-Frame-Options: DENY
      X-Robots-Tag: noindex, nofollow
      X-XSS-Protection: 1; mode=block
